add class container on the body

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body ng-app="Punch">
+  <body ng-app="Punch" class="container">
     <h1>Punch!</h1>
     <div class="main" ng-controller="MainCtrl">
     <label for="search-box">
