--- a/index.html
+++ b/index.html
@@ -2,93 +2,15 @@
 <html>
 
   <head>
-    <link data-require="bootstrap-css@*" data-semver="3.3.1" rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body ng-app="Punch" class="container">
-    <h1>Punch!</h1>
-    <div class="main" ng-controller="MainCtrl">
-    <label for="search-box">
-      Search for Employee
-    </label>
-      <input id="search-box" class="form-control" ng-model="searchText" />
-      <table class="table">
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Job Title</th>
-            <th>Hours Worked this month</th>
-            <th>Edit</th>
-            <th>Delete</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="employee in model.employees | searchBy : searchText : 'fname'">
-            <td>
-              <span ng-hide="employee.edit">{{ employee.id }}</span>
-              <input ng-show="employee.edit" type="text" class="form-control" ng-model="employee.id" />
-            </td>
-            <td>
-                <span ng-hide="employee.edit">{{ employee.fname | capitalize }}</span>
-                <input ng-show="employee.edit" type="text" class="form-control" ng-model="employee.fname" />
-            </td>
-            <td>
-                <span ng-hide="employee.edit">{{ employee.lname }}</span>
-                <input ng-show="employee.edit" class="form-control" type="text" ng-model="employee.lname" />
-            </td>
-            <td>
-                <span ng-hide="employee.edit">{{ getTitle(employee.title) }}</span>
-                <select ng-show="employee.edit"  class="form-control" ng-model="employee.title" ng-options="id as title for (id, title) in model.jobs">
-                  <option value="">Select a Job</option>
-                </select>
-            </td>
-            <td>
-                <span ng-hide="employee.edit">{{ employee.hours }}</span>
-                <input ng-show="employee.edit" class="form-control" type="text" ng-model="employee.hours" />
-            </td>
-            <td>
-              <button class="btn btn-default glyphicon glyphicon-ok" ng-show="employee.edit" ng-click="toggleEditEmployee(employee)"></button>
-              <button class="btn btn-primary glyphicon glyphicon-edit" ng-hide="employee.edit" ng-click="toggleEditEmployee(employee)"></button>
-            </td>
-            <td><button class="btn btn-danger glyphicon glyphicon-trash" ng-click="deleteEmployee($index)"></button></td>
-          </tr>
-        </tbody>
-        <tfoot>
-          <tr>
-            <td><input
-              placeholder="ID"
-              type="text"
-              class="form-control"
-              ng-model="newEmployee.id"
-            /></td>
-            <td><input
-              placeholder="First Name"
-              type="text"
-              class="form-control"
-              ng-model="newEmployee.fname"
-            /></td>
-            <td>
-              <input
-                placeholder="Last Name"
-                type="text"
-                class="form-control"
-                ng-model="newEmployee.lname"
-              /></td>
-            <td>
-              <select class="form-control" ng-model="newEmployee.title"
-                ng-options="id as title for (id, title) in model.jobs">
-                <option value="">Select a Job</option>
-              </select>
-            </td>
-            <td><button class="btn btn-success glyphicon glyphicon-plus" ng-click="addEmployee(newEmployee)">Add</button></td>
-          </tr>
-        </tfoot>
-      </table>
-    </div>
+    <ng-include src="'partials/header.html'" ></ng-include>
+    <ng-view></ng-view>
   </body>
-  <script data-require="angular.js@*" data-semver="1.3.7" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.7/angular.js"></script>
-  <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-route.min.js"></script>
+  <script src="js/script.js"></script>
 </html>
