--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
   </head>
 
   <body ng-app="Punch" class="container">
+
     <ng-include src="'partials/header.html'" ></ng-include>
     <ng-view></ng-view>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-route.min.js"></script>
+    <script src="app.js"></script>
+    <script src="components\employee\capitalizeFilter.js"></script>
+    <script src="components\employee\EmployeeController.js"></script>
+    <script src="components\employee\employeesFactory.js"></script>
+    <script src="components\employee\MainCtrl.js"></script>
+    <script src="components\employee\searchByFilter.js"></script>
   </body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-route.min.js"></script>
-  <script src="app.js"></script>
-  <script src="features\employee\capitalizeFilter.js"></script>
-  <script src="features\employee\EmployeeController.js"></script>
-  <script src="features\employee\employeesFactory.js"></script>
-  <script src="features\employee\MainCtrl.js"></script>
-  <script src="features\employee\searchByFilter.js"></script>
 </html>
